--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "^8.1.0",
         "guzzlehttp/guzzle": "^7.9.2",
         "laravel/framework": "^9.46.0|^10.34.2|^11.29.0",
-        "openai-php/client": "^0.10.2"
+        "openai-php/client": "dev-main"
     },
     "require-dev": {
         "laravel/pint": "^1.18.1",
@@ -59,5 +59,11 @@
             "@test:types",
             "@test:unit"
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/TheArKaID/php-openai"
+        }
+    ]
 }
